# Summer-Semester-2024-Programming-Exercise-I

./: .gitignore  CMakeLists.txt  README.md
src/2024summer/1/: 1TE23014S.c  hello_world  hello_world.c
src/2024summer/11/: base_stat_of_array  base_stat_of_array.c
src/2024summer/12/: oblique_projection  oblique_projection.c
src/2024summer/13/: 1TE23014S.c  newton
src/2024summer/18/: 1TE23014S.c  simpson
src/2024summer/19/: 12-ex1-LU  12-ex1-LU.c  lu_data.txt  lu_data2.txt  lu_data3.txt  lu_data4.txt
src/2024summer/2/: printf_variable  printf_variable.c
src/2024summer/23/: 1TE23014S.c  data0.txt  data1.txt  data2.txt  data3.txt  sort  sort.c
src/2024summer/3/: print_scanf  print_scanf.c
src/2024summer/4/: 1TE23014S.c  convC2F  convC2F.c
src/2024summer/5/: 1TE23014S.c  quadraticFormula.c  scope_variables
src/2024summer/6/: quadraticFormula  quadraticFormula.c
src/2024summer/7/: 1TE23014S.c  free_fall
src/algo/: 1TE23014S.cpp  merge
src/algo/binary_tree/: binaryTree  binaryTree.c
src/algo/chain_hash/: 1TE23014S.c  chainHash
src/algo/counting/: 1TE23014S.c  counting_sort
src/algo/list/: 1TE23014S.c  list
src/algo/radix/: 1TE23014S.c  radix_sort
src/algo/search_tree/: 1TE23014S.c  searchTree
src/algo/stack_and_queue/: 1TE23014S.c  StackAndQueue
src/hoge/: he.c
src/te/: 1TE23014S.c  1TE23014S.cpp  te  te.c
